src/objects/MUSW__Bluebeam_Relationship_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>MUSW__Child_Object_API_Name__c</fullName>
        <label>Child Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parent_Lookup_API_Name__c</fullName>
        <label>Parent Lookup API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parent_Object_API_Name__c</fullName>
        <label>Parent Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Session</fullName>
                    <default>true</default>
                    <label>Session</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bluebeam Relationship Setting</label>
    <pluralLabel>Bluebeam Relationship Settings</pluralLabel>
</CustomObject>